<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/key_pad_number_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_commit_button_bg"
            android:text="@string/text_1"
            android:textSize="15sp" />

        <Button
            android:layout_width="0dp"
            android:id="@+id/key_pad_number_2"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_2"
            android:layout_marginLeft="5dp"
            android:background="@drawable/selector_commit_button_bg"
            android:textSize="15sp" />

        <Button
            android:layout_width="0dp"
            android:id="@+id/key_pad_number_3"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/selector_commit_button_bg"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/key_pad_number_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_commit_button_bg"
            android:text="@string/text_4"
            android:textSize="15sp" />

        <Button
            android:layout_width="0dp"
            android:id="@+id/key_pad_number_5"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_5"
            android:layout_marginLeft="5dp"
            android:background="@drawable/selector_commit_button_bg"
            android:textSize="15sp" />

        <Button
            android:layout_width="0dp"
            android:id="@+id/key_pad_number_6"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_6"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/selector_commit_button_bg"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/key_pad_number_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_commit_button_bg"
            android:text="@string/text_7"
            android:textSize="15sp" />

        <Button
            android:layout_width="0dp"
            android:id="@+id/key_pad_number_8"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_8"
            android:layout_marginLeft="5dp"
            android:background="@drawable/selector_commit_button_bg"
            android:textSize="15sp" />

        <Button
            android:id="@+id/key_pad_number_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_commit_button_bg"
            android:text="@string/text_9"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:id="@+id/key_pad_number_0"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_0"
            android:layout_marginLeft="5dp"
            android:background="@drawable/selector_commit_button_bg"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="0dp"
            android:id="@+id/key_pad_delete"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@mipmap/button_delete"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/selector_commit_button_bg"
            android:textSize="15sp" />

     </LinearLayout>


</LinearLayout>